# dem-comparison

./: .gitignore  .pre-commit-config.yaml  README.md  dem_comparison.ipynb  environment.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
dem_comparison/: analysis.py  plots.py  utils.py
test_notebooks/: aoi.ipynb  aoi.py  dem_comparison.ipynb  height_profile.ipynb  mosaics.py
tests/: test_mp.py
