[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dem-comparison"
requires-python = ">=3.8"
authors = [
    {name="Geoscience Australia", email="DigitalEarthAntarctica@ga.gov.au"},
]
description = "DEM comparison utility"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
version = "0.1" # TODO base this on files in project

[project.urls]
Homepage = "https://github.com/GeoscienceAustralia/dem-handler.git"
# Documentation = "XXX"

#[project.scripts]

[tool.pytest.ini_options]
testpaths = ["tests/*"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dem_comparison = ["**/*.gpkg"]